--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ Links
 <ul>
 <li><a href="https://github.com/gwilson2151/gwilson2151.github.io">https://github.com/gwilson2151/gwilson2151.github.io</a></li>
 <li><a href="https://help.github.com/categories/github-pages-basics/">https://help.github.com/categories/github-pages-basics/</a></li>
-<li><a href="https://github.com/msysgit/msysgit/releases">https://github.com/msysgit/msysgit/releases</a></li>
+<li><a href="https://github.com/msysgit/msysgit/releases">Git for Windows</a></li>
+<li><a href="http://www.ooblick.com/text/sh/">Great sh reference</a></li>
 <!-- <li><a href=""></a></li> -->
 </ul>
 </body>
