--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@ Links
 <li><a href="https://github.com/msysgit/msysgit/releases">Git for Windows</a></li>
 <li><a href="http://www.sbf5.com/~cduan/technical/git/">Git conceptually</a></li>
 <li><a href="http://www.ooblick.com/text/sh/">Great sh reference</a></li>
+<li><a href="http://json-schema.org/">JSON Schema</a></li>
+<li><a href="http://tools.ietf.org/html/draft-pbryan-zyp-json-ref-03">JSON Reference Memo</a></li>
+<li><a href="http://www.ofx.net/OFXExamplesPage/OFXExamples.aspx">OFX Examples</a></li>
+<li><a href="http://zduck.com/2012/powershell-batch-files-exit-codes/">Powershell/bat exit codes fubar</a></li>
 <!-- <li><a href=""></a></li> -->
+</ul>
+Useful Software
+<ul>
+<li><a href="https://github.com/hyde/hyde">Hyde</a></li>
+<li><a href="http://ipython.org/ipython-doc/stable/interactive/reference.html">IPython Reference</a></li>
 </ul>
 </body>
 </html>
