[gpw] Added Android Development Codex link.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <li><a href="http://tools.ietf.org/html/draft-pbryan-zyp-json-ref-03">JSON Reference Memo</a></li>
 <li><a href="http://www.ofx.net/OFXExamplesPage/OFXExamples.aspx">OFX Examples</a></li>
 <li><a href="http://zduck.com/2012/powershell-batch-files-exit-codes/">Powershell/bat exit codes fubar</a></li>
+<li><a href="http://forum.xda-developers.com/wiki/Android_Development_Codex">Android Development Codex</a></li>
 <!-- <li><a href=""></a></li> -->
 </ul>
 <h2>Useful Software</h2>
