--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 <li><a href="http://forum.xda-developers.com/wiki/Android_Development_Codex">Android Development Codex</a></li>
 <li><a href="https://www.hackthissite.org">Hack This Site</a></li>
 <li><a href="http://www.lmcs-online.org/index.php">Logical Methods in Computer Science</a></li>
+<li><a href="http://stackoverflow.com/questions/263400/what-is-the-best-algorithm-for-an-overridden-system-object-gethashcode">SO Question on hashcodes</a></li>
 <!-- <li><a href=""></a></li> -->
 </ul>
 <h2>Useful Software</h2>
 <ul>
 <li><a href="https://github.com/hyde/hyde">Hyde</a></li>
 <li><a href="http://ipython.org/ipython-doc/stable/interactive/reference.html">IPython Reference</a></li>
+<li><a href="http://securitydriven.net/inferno/">Inferno Crypto Library</a></li>
 </ul>
 <h2>MVC</h2>
 <ul>
