Added pages for shell and git configs.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
 <body>
+<h2>Settings</h2>
+<ul>
+<li><a href="gitconfig.html">.gitconfig</a></li>
+<li><a href="bashrc.html">.bashrc</a></li>
+<li><a href="profile.ps1.html">profile.ps1</a></li>
+</ul>
 <h2>Links</h2>
 <ul>
 <li><a href="https://github.com/gwilson2151/gwilson2151.github.io">https://github.com/gwilson2151/gwilson2151.github.io</a></li>
