preformatted code blocks.

--- a/bashrc.html
+++ b/bashrc.html
@@ -1,11 +1,11 @@
 <html>
 <body>
 <h2>.bashrc</h2>
-<code>
+<pre><code>
 alias ls='ls -h --color'
 alias ll="ls -l"
 alias la="ls -la"
 alias npp=$"\"/c/Program Files (x86)/Notepad++/notepad++.exe\""
-</code>
+</code></pre>
 </body>
 </html>
