--- a/gitconfig.html
+++ b/gitconfig.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <h2>.gitconfig</h2>
-<code>
+<pre><code>
 [alias]
 	co = checkout
 	st = status
@@ -14,6 +14,6 @@
 	unstage = reset HEAD --
 	discard = checkout --
 	st-commit = diff-tree --name-status -r
-</code>
+</code></pre>
 </body>
 </html>
