--- a/profile.ps1.html
+++ b/profile.ps1.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <h2>profile.ps1</h2>
-<code>
+<pre><code>
 if ($host.Name -eq 'ConsoleHost')
 {
     Import-Module PSGet
@@ -17,6 +17,6 @@ if ($host.Name -eq 'ConsoleHost')
 		}
 	}
 }
-</code>
+</code></pre>
 </body>
 </html>
