Fixed up HTML errors. Changed profile.ps1 to only try to import PSReadline and PSColor if powershell version is > 2.x.

--- a/profile.ps1.html
+++ b/profile.ps1.html
@@ -4,16 +4,46 @@
 <pre><code>
 if ($host.Name -eq 'ConsoleHost')
 {
+	# Set up environment
     Import-Module PSGet
-    Import-Module PSReadline
-	Import-Module PSColor
 	
+	function Load-PSReadline() {
+		if ($PSVersionTable.PSVersion.Major -gt 2) {
+			Import-Module PSReadline
+		}
+		else {
+			Write-Host "profile.ps1 - Didn't load module PSReadline since the module requires powershell version > 2.x!" -Foreground Yellow
+		}
+	}
+	
+	function Load-PSColor() {
+		if ($PSVersionTable.PSVersion.Major -gt 2) {
+			Import-Module PSColor
+		}
+		else {
+			Write-Host "profile.ps1 - Didn't load module PSColor since the module requires powershell version > 2.x!" -Foreground Yellow
+		}
+	}
+	
+	Load-PSColor
+	Load-PSReadline
+	
+	# Somewhat useful functions
 	function Show-Colors( ) {
 		$colors = [Enum]::GetValues([ConsoleColor])
 		$max = ($colors | foreach { "$_ ".Length } | Measure-Object -Maximum).Maximum
 		foreach($color in $colors) {
 			Write-Host (" {0,2} {1,$max} " -f [int]$color,$color) -NoNewline
 			Write-Host "$color" -Foreground $color
+		}
+	}
+	
+	function Show-ColorTable() {
+		for ($bg = 0; $bg -lt 0x10; $bg++) {
+			for ($fg = 0; $fg -lt 0x10; $fg++) {
+				Write-Host -nonewline -background $bg -foreground $fg (" {0:X}{1:X} " -f $bg,$fg)
+			}
+			Write-Host
 		}
 	}
 }
